[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiodbm"
authors = [{name = "Erik Kalkoken", email = "kalkoken87@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/ErikKalkoken/aiodbm"
Tracker = "https://github.com/ErikKalkoken/aiodbm/issues"

[tool.isort]
profile = "black"
